[project]
dependencies = [
    "pyloudnorm==0.1.1",
    "pytorch_lightning==1.9.2",
    "torch>=1.13.1",
    "torchaudio>=0.13.1",

]
name = "cocktail_fork"
description = "An implementation of https://github.com/merlresearch/cocktail-fork-separation"
version = "1.2.0"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = { "cocktail_fork" = "src" }
